# name-generator-nicomp

./: NameGenerator.sln  README.md
NameGenerator/: LICENSE  NameGenerator.pyproj  README.md  main.py  pyproject.toml
NameGenerator/src/data/: adjectives.txt  nouns.txt
NameGenerator/src/mainPackage/: main.py
NameGenerator/src/name_generator_nicomp/: NameGenerator.py  adjectives_master.txt  nouns.txt  utilities.py
